# video-object-tracking

./: .gitignore  pyproject.toml
backend/: main.py
backend/api/: deps.py  health.py
backend/api/v1/: detection.py  upload.py  video_job.py
backend/core/: config.py  enums.py  logging.py
backend/database/: __init__.py  base.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 68baaf9b657b_create_video_job_and_detection_tables.py  981268d84e14_init_db_foundation.py
backend/models/: __init__.py  detection.py  video_job.py
backend/repositories/: __init__.py  base.py  detection.py  video_job.py
backend/schemas/: __init__.py  detection.py  video_job.py
backend/services/: __init__.py  detection.py  video_job.py
backend/vision/: detector.py  test_detector.py
backend/workers/: video_processor.py
